Adição inicial da rota de login

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "migrate-local-undo": "cross-env NODE_ENV=local sequelize db:migrate:undo:all"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
